# claude-change-provider

./: .gitignore  CLAUDE.md  KIMI_K27_UPGRADE.md  KIMI_K3_UPGRADE.md  PROXY.md  README.md  SETUP_FAILURE_PREVENTION.md  claudeapikey_plan.md  init.sh  initmacOS.sh  pyproject.toml  upgrade-to-k27.sh  upgrade-to-k3.sh
claudeapikey/: __init__.py  claude_settings.py  config_store.py  doctor.py  env_builder.py  main.py  models.py  proxy.py  runner.py  secret_store.py  systemd_service.py  web_server.py
claudeapikey/templates/: index.html
tests/: test_claude_settings.py  test_cli.py  test_config_store.py  test_env_builder.py  test_proxy.py  test_secret_store.py  test_web_server.py
