[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claudeapikey"
version = "0.1.0"
description = "Claude Code vendor switcher CLI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Developer" },
]
keywords = ["claude", "api", "cli", "vendor", "switcher"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "keyring>=25.0.0",
    "rich>=13.0.0",
    "platformdirs>=4.0.0",
    "requests>=2.31.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
claudeapikey = "claudeapikey.main:app"

[project.urls]
Homepage = "https://github.com/example/claudeapikey"

[tool.hatch.build.targets.wheel]
packages = ["claudeapikey"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
